--- a/src/components/Windows/spotify.scss
+++ b/src/components/Windows/spotify.scss
@@ -160,6 +160,7 @@
                 display: flex;
                 flex-direction: column;
                 overflow: hidden;
+                min-width: 0;
 
                 h4 {
                   color: #fff;
