--- a/src/components/Windows/window.scss
+++ b/src/components/Windows/window.scss
@@ -90,7 +90,7 @@
 }
 
 .mobile-maximized {
-  width: 100vw !important;
+  width: 100% !important;
   height: calc(100vh - 120px) !important;
   transform: translate(0px, 32px) !important;
 }
